# server

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  build.sh  docker-compose.yml  install.sh  main.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
app/: main.py
app/api/v1/: account.py  apps.py  audit.py  auth.py  devices.py  revisions.py
app/core/: auth.py  config.py  ratelimit.py
app/db/: models.py  session.py
src/: settings.py  version.py
src/api/dependencies/: auth.py
src/api/v1/: __init__.py
src/api/v1/apps/: routes.py
src/api/v1/auth/: routes.py  views.py
src/api/v1/devices/: routes.py  views.py
src/api/v1/health/: routes.py
src/api/v1/revisions/: routes.py
src/api/v1/rotation/: routes.py  views.py
src/api/v1/users/: routes.py  views.py
src/core/auth/: exceptions.py
src/core/db/: connection.py  migrate.py
src/core/db/repository/: app_repo.py  audit_repo.py  invitation_repo.py  user_repo.py
src/core/services/: account_service.py  app_service.py  audit_service.py  auth_service.py  device_service.py  revision_service.py  rotation_service.py  user_service.py
src/enums/: audit.py
src/models/: base.py
tests/: conftest.py  test_api.py  test_health.py  test_invitations.py  test_rotation.py  test_users.py
