[project]
name = "server"
version = "0.1.0"
description = "API backend for dotMage E2E-encrypted .env secret manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
